# concert-robot-recg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: model.onnx  model.trt
audio/: CMakeLists.txt  preprocess.cpp  preprocess.hpp  sampler.cpp  sampler.hpp
beat_recg/: CMakeLists.txt  beat.cpp  beat.hpp  beat_recg.py
core_io/: robot_comm.py  timer.hpp
emo_recg/: CMakeLists.txt  TRTModule.cpp  TRTModule.hpp
scripts/: startup.sh
